<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.UserDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutMessageError"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/grey"
        android:elevation="@dimen/margin_4"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarDetail"
        tools:visibility="gone">

        <TextView
            android:id="@+id/tvEmptyList"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_24"
            android:gravity="center"
            android:text="@string/layout_error"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDetail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blue_200"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarDetail" />

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarDetail" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <View
        android:id="@+id/viewUser"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blue_200"
        app:layout_constraintBottom_toBottomOf="@+id/viewEmpty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <TextView
        android:id="@+id/tvUser"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:text="User" />

    <View
        android:id="@+id/viewEmpty"
        android:layout_width="0dp"
        android:layout_height="@dimen/view_separator_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUser"
        tools:text="@string/string_company" />

    <TextView
        android:id="@+id/tvName"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEmpty"
        tools:text="@string/string_name" />

    <TextView
        android:id="@+id/tvCompany"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        tools:text="@string/string_company" />

    <TextView
        android:id="@+id/tvBlog"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvCompany"
        app:layout_constraintStart_toStartOf="@+id/tvCompany"
        app:layout_constraintTop_toBottomOf="@+id/tvCompany"
        tools:text="@string/string_blog" />

    <TextView
        android:id="@+id/tvLocation"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintEnd_toEndOf="@+id/tvBlog"
        app:layout_constraintStart_toStartOf="@+id/tvBlog"
        app:layout_constraintTop_toBottomOf="@+id/tvBlog"
        tools:text="@string/string_location" />

    <View
        android:id="@+id/viewBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@color/grey_50"
        app:layout_constraintBottom_toTopOf="@+id/rvRepository"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

    <TextView
        android:id="@+id/tvRepos"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        app:layout_constraintEnd_toEndOf="@+id/tvLocation"
        app:layout_constraintStart_toStartOf="@+id/tvLocation"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation"
        tools:text="@string/string_repos" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRepository"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@color/grey_50"
        android:clipChildren="false"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRepos"
        tools:itemCount="4"
        tools:listitem="@layout/user_card_view" />
</androidx.constraintlayout.widget.ConstraintLayout>
